--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.8",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "react": "^18",
